@@ -674,3 +674,4 @@
 
 [2024-04-17]
 - Added the script for the spell Bloodgem Infusion to make the quest Bloodgem Crystals complete for every member of a group.
+- Added the script for Commander Dawnforge to make the quest Information Gathering trigger for every member of a group.
